[package]
name = "mutual-rectification"
version = "0.1.0"
authors = ["Vova Abdrakhmanov <369565@gmail.com>", "Alexey Golubev <dr.freecx@gmail.com>"]

[dependencies]
tini = "0.1"
scoped_threadpool = "0.1.*"
time = "0.1"
scattering = { git = "https://github.com/pinecrew/electron-phonon-scattering-2d" }
linal = "0.2"

[[bin]]
name = "current"
path = "src/current.rs"
